--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -78,13 +78,15 @@
 		}
 		&-img {
 			/* autoprefixer: on */
-			width: auto;
-			height: auto;
 			opacity: 0.5;
+			@include mixins.desktop {
+				width: auto;
+				height: auto;
+			}
 		}
 	}
 	&__title {
-		font-size: 1.6rem;
+		font-size: 1.55rem;
 		line-height: 1.2;
 		@include mixins.desktop {
 			font-size: 2.15rem;
@@ -97,11 +99,12 @@
 	}
 	&__text {
 		margin-top: 1.2em;
-		font-size: 0.88rem;
+		font-size: 0.85rem;
 		color: var(--main-paragraph);
 		@include mixins.desktop {
 			margin-top: 1.5em;
 			padding-right: 1.25em;
+			font-size: 0.88rem;
 			line-height: 1.7;
 			letter-spacing: 0.25px;
 		}
